<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_fg_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_close"
            app:title="">

            <TextView
                android:id="@+id/title_fg_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:textStyle="bold"
                tools:text="@string/app_name" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/playground_fg_room"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="32dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/bgd_fg_room"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bgd_game"
                android:focusable="false"
                app:strokeColor="#E4A64A"
                app:strokeWidth="5dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet_fg_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/space_normal"
        android:paddingBottom="@dimen/space_normal"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:alpha="0.12"
            android:background="?attr/colorOnSurface"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/drag_fg_room"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:src="@drawable/ic_drag"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnSurface"
            tools:ignore="ContentDescription" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start_fg_room"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/start"
            app:layout_constraintBottom_toTopOf="@id/btn_end_fg_room"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/drag_fg_room"
            app:shapeAppearance="@style/cornerNormalStyle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_end_fg_room"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/end"
            app:backgroundTint="@android:color/holo_red_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_start_fg_room"
            app:shapeAppearance="@style/cornerNormalStyle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_mic_fg_room"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:minWidth="0dp"
            android:minHeight="0dp"
            app:backgroundTint="@android:color/transparent"
            app:icon="@drawable/ic_mic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/drag_fg_room" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_trophy_fg_room"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/app_name"
            app:icon="@drawable/ic_trophy"
            app:layout_constraintStart_toEndOf="@id/btn_mic_fg_room"
            app:layout_constraintTop_toBottomOf="@id/drag_fg_room" />

        <NumberPicker
            android:id="@+id/number_picker_fg_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_start_fg_room"
            app:layout_constraintTop_toBottomOf="@id/drag_fg_room" />

        <TextView
            android:id="@+id/people_count_fg_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_mic_fg_room"
            tools:text="@string/current_people_count" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_control_fg_room"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:constraint_referenced_ids="btn_trophy_fg_room, number_picker_fg_room, btn_start_fg_room, btn_end_fg_room" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>