<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_fg_list"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:backgroundTint="?attr/colorSurface"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_fg_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_account"
            app:title="">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/empty_view_fg_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/app_bar_fg_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawablePadding="@dimen/space_normal"
        android:gravity="center"
        android:text="@string/list_empty"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/ic_empty_list" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_fg_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_fg_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:itemCount="12"
            tools:listitem="@layout/item_room_list"
            tools:paddingTop="?attr/actionBarSize" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <!--    Scrim Background-->
    <View
        android:id="@+id/scrim_fg_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/scrimBackground"
        android:visibility="invisible"
        app:layout_behavior="com.google.android.material.transformation.FabTransformationScrimBehavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_fg_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_normal"
        android:contentDescription="@string/create_room"
        android:src="@drawable/ic_add"
        app:backgroundTint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/card_fg_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/space_normal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:focusableInTouchMode="true"
            android:padding="@dimen/space_normal">

            <TextView
                android:id="@+id/title_view_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:textIsSelectable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/create_room" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_room_view_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_normal"
                android:hint="@string/please_input_room_name"
                android:padding="@dimen/space_normal"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusTopStart="4dp"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconDrawable="@drawable/ic_close"
                app:endIconMode="clear_text"
                app:errorEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/title_view_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_room_view_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:paddingVertical="@dimen/space_normal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_user_view_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_normal"
                android:hint="@string/please_input_user_name"
                android:padding="@dimen/space_normal"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusTopStart="4dp"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconDrawable="@drawable/ic_close"
                app:endIconMode="clear_text"
                app:errorEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/input_room_view_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_user_view_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:paddingVertical="@dimen/space_normal"
                    tools:text="@string/app_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirm_view_layout"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_normal"
                android:text="@android:string/ok"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_user_view_input" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>
</androidx.constraintlayout.widget.ConstraintLayout>